<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CalendarView">

    <!-- date toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@android:color/holo_blue_dark">

    <ImageButton
        android:id="@+id/previousButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="@dimen/dp80"
        android:layout_height="0dp"
        android:src="@drawable/ic_keyboard_arrow_left_24dp"
        android:contentDescription="@string/calendar_previous_month"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="@dimen/dp80"
        android:layout_height="0dp"
        android:src="@drawable/ic_keyboard_arrow_right_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/calendar_next_month" />

    <TextView
        android:id="@+id/currentDateLabel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp56"
        android:gravity="center"
        android:textSize="@dimen/sp18"
        app:layout_constraintLeft_toRightOf="@id/previousButton"
        app:layout_constraintRight_toLeftOf="@id/nextButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="July 2019"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelMonday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_monday"
            app:layout_constraintEnd_toStartOf="@+id/labelTuesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelTuesday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_tuesday"
            app:layout_constraintEnd_toStartOf="@+id/labelWednesday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelMonday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelWednesday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_wednesday"
            app:layout_constraintEnd_toStartOf="@+id/labelThursday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelTuesday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelThursday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_thursday"
            app:layout_constraintEnd_toStartOf="@+id/labelFriday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelWednesday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelFriday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_friday"
            app:layout_constraintEnd_toStartOf="@+id/labelSaturday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelThursday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelSaturday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_saturday"
            app:layout_constraintEnd_toStartOf="@+id/labelSunday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelFriday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelSunday"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp45"
            android:gravity="center"
            android:text="@string/calendar_sunday"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelSaturday"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.domyno.colorfulcalendar.views.WrappingViewPager
            android:id="@+id/calendarMonthViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
